package com.mpoom.designpattern.creational.factorymethod.example1;

/**
 * @description 日志记录器接口:抽象产品
 * @author: Yaoke.Hu
 * @date: 2020/10/24
 */
public interface Logger {

    void writeLog();
}
