package com.mpoom.designpattern.creational.factorymethod.example1;

/**
 * @description
 * @author: Yaoke.Hu
 * @date: 2020/10/25
 */
public interface LoggerFactory {
    Logger createLogger();
}
